[build-system]
requires = ["setuptools>=61.0", "tensorrt"]
build-backend = "setuptools.build_meta"

[project]
name = "sda"
version = "0.0.1"
description = "stable diffusion accelerated"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/chavinlo/sda-node"
"Bug Tracker" = "https://github.com/chavinlo/sda-node/issues"